# embloy

./: .gitignore  .overcommit.yml  .rubocop.yml  APACHE-LICENSE  Dockerfile  Gemfile  MIT-LICENSE  README.md  apidoc_tmp.md  azure-pipelines.yml  codecov.yml  example.env  file_depr.txt  flog_check.rb  go.work  go.work.sum  newrelic.yml  package.json  render.yaml  test.json
.github/workflows/: deploy_to_aca_core_server.yaml  deploy_to_aks_core_server.yaml  deploy_to_azure_core_server.yaml  embloy-core-AutoDeployTrigger-dcebf20c-6ed1-40f7-baad-23e67faeedb1.yml  rubyonrails.yml
app/controllers/: application_controller.rb  applications_controller.rb  job_assignment_controller.rb  jobs_controller.rb  oauth_callbacks_controller.rb  password_resets_controller.rb  passwords_controller.rb  preferences_controller.rb  profile_controller.rb  registrations_controller.rb  reviews_controller.rb  (+3 more)
config/: application.rb  cable.yml  credentials.yml.enc  database.yml  email_dev.yml  email_prod.yml  environment.rb  importmap.rails_admin.rb  job_types.json  mongoid.yml  puma.rb  routes.rb  storage.yml
coverage/: .resultset.json  index.html
db/: schema.rb  seeds.rb  seeds_old.rb
genius/: Cargo.toml
genius/src/: main.rs
k8s-specifications/: core-api-deployment.yaml  db-service.yaml
lib/: feed_generator.rb  notification_generator.rb
manifests/: deployment.yml  service.yml
proxy/: .gitignore  Dockerfile  README.md  example.env  go.mod  go.sum
public/: 403.html  403_blocked.html  404.html  422.html  500.html
spec/: rails_helper.rb  spec_helper.rb  tmp.rb
test/: tmp.rb
(+439 files in other folders)
