[package]
authors = ["Jan Hummel <jan.hummel@de.embloy.com>", "Carlo Bortolan <carlo.bortolan@de.embloy.com"]
name = "embloy-genius-service"
description = "Genius Service"
readme = "README.md"
repository = "https://github.com/Embloy/Embloy-Core-Server"
license = "NONE"
version = "0.1.0"
edition = "2021"


[dependencies]
# actix-web = { version = "4", features = ["openssl"] }
actix-web = { version = "4" }
# openssl = { version = "0.10" }
actix-rt = "2.8.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
serde_derive = "1.0.130"
num_cpus = "1.14.0"
chrono = "0.4.24"
csv = "1.2"
ndarray = "0.16.1"
ndarray-csv = "0.5.1"
rand = "0.8.5"
smartcore = "0.4.0"
mongodb = "3.1.1"
lazy_static = "1.4"
bson = "2.6.1"
